# Cinpos_model

./: .env  .gitignore  AGENTS.md  CLAUDE.md  CODEX-RULES.md  COPILOT_AGENT_README.md  NOTE.md  README.md  columns_origin_map.md  feature_field_def.md  pyproject.toml  render.yaml  srcwebbusinessdetailrequirements.txt  test_cloudflare_bypass.py  test_feature_engineering.py  test_prediction_integration.py  test_validation.py
.claude/: settings.local.json
config/: exclude_movies.csv  pipeline_config.yaml
docs/: WORK_LOG.md  data_dictionary.md  feature_config.yaml  project_overview.md  spec_guidelines.md  spec_model.md  spec_web.md  如何使用文件系統.md  (+2 more)
src/web/business/detail/: UI_COMPONENTS_AUDIT.md  app.py  config.py  pyproject.toml  render.yaml  requirements.txt  start.sh  test_app.py
src/web/business/detail/blueprints/: __init__.py  boxoffice_list_api.py  movie_api.py  prediction_api.py  stats_api.py  web_routes.py
src/web/business/detail/models/: movie.py  prediction.py
src/web/business/detail/services/: __init__.py  decline_warning_service.py  movie_service.py  prediction_service.py  stats_service.py
src/web/business/detail/static/css/: base.css  components.css  layout.css  main.css  ui-kits.css  utilities.css
src/web/business/detail/static/css/components/: form-table.css  package.css
src/web/business/detail/static/js/: charts.js  main.js  movieService.js  predict.js
src/web/business/detail/static/js/common/: tracking.js  warning-utils.js
src/web/business/detail/static/js/pages/: index.js  movie_detail.js  predict.js
src/web/business/detail/static/js/service/: movieService.js
src/web/business/detail/templates/: 404.html  base.html  index.html  movie_detail.html  predict.html  predict_new.html
src/web/business/detail/utils/: __init__.py  validators.py
(+2291 files in other folders)
