[project]
name = "cinpos-model"
version = "0.1.0"
description = "A Python-based movie recommendation and trend analysis system."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "chiawen81", email = "fangchiawen@gmail.com" }
]
license = { text = "MIT" }

# 主要依賴套件
dependencies = [
    "requests", # 網路請求
    "beautifulsoup4", # HTML 解析
    "pandas", # 資料處理
    "lxml", # 解析器加速
    "pyyaml", # 讀取設定檔 (config/settings.yaml)
    "datetime>=5.5",
    "rapidfuzz>=3.14.1",
    "tqdm>=4.67.1",
    "dotenv>=0.9.9",
    "scikit-learn>=1.7.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "flask-cors>=4.0.0",
    "cloudscraper>=1.2.71",
    "seaborn>=0.13.2",
]

# 建置設定
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# 可選：開發階段工具設定（建議保留）
[tool.black]
line-length = 100
target-version = ['py313']

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.ruff]
target-version = "py313"
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

