[project]
name = "movie-prediction-web"
version = "0.1.0"
description = "Movie Box Office Prediction Web Application"
requires-python = ">=3.9"

dependencies = [
    "flask>=3.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "flask-cors>=4.0.0",
    "requests>=2.32.5",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
